# simple_soccer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  physics.cpp  physics.hpp
src/core/: constants.hpp  logger.hpp  math.cpp  math.hpp
src/logic/: components.hpp  render.cpp  render.hpp
src/states/: FieldPlayerState.hpp  GameState.hpp  GoalkeeperState.hpp  Team.hpp
